devops/k8s/backend/deployment-dev.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker-backend-dev
spec:
  selector:
    matchLabels:
      app: expense-tracker-backend-dev
  replicas: 2
  template:
    metadata:
      labels:
        app: expense-tracker-backend-dev
    spec:
      containers:
      - name: expense-tracker-backend-dev
        image: ghcr.io/pvico12/expense-tracker-backend:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: gcp-vision-api-service-account-config
          mountPath: /app/expense-tracker-gcp.json
          subPath: expense-tracker-gcp.json
        - name: gcp-firebase-service-account-config
          mountPath: /app/expense-tracker-firebase.json
          subPath: expense-tracker-firebase.json
      volumes:
      - name: gcp-vision-api-service-account-config
        configMap:
          name: gcp-vision-api-service-account-config
      - name: gcp-firebase-service-account-config
        configMap:
          name: gcp-firebase-service-account-config
      imagePullSecrets:
      - name: ghcr-creds-secret
---
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-backend-dev
spec:
  selector:
    app: expense-tracker-backend-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
