devops/k8s/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: expense-tracker-backend-pvico.k8s.csclub.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expense-tracker-backend
            port:
              number: 80
